--- a/package.json
+++ b/package.json
@@ -1,77 +1,85 @@
 {
   "name": "remix-nestjs",
-  "version": "1.0.0",
-  "description": "Remix 项目模板，使用 NestJS 作为服务端",
-  "main": "index.js",
+  "description": "",
+  "license": "",
+  "sideEffects": false,
   "scripts": {
-    "prepare": "husky install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "run-s build:*",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "build:server": "esbuild --platform=node --format=cjs ./server.ts --outdir=build",
+    "dev": "run-p dev:*",
+    "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config --require ./mocks ./build/server.js",
+    "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
+    "dev:remix": "cross-env NODE_ENV=development remix watch",
+    "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch",
+    "docker": "docker-compose up -d",
+    "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "setup": "prisma migrate dev && prisma db seed",
+    "start": "cross-env NODE_ENV=production node ./build/server.js",
+    "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/turing-fe/remix-nestjs.git"
+  "dependencies": {
+    "@prisma/client": "^3.13.0",
+    "@remix-run/express": "*",
+    "@remix-run/node": "*",
+    "@remix-run/react": "*",
+    "@remix-run/server-runtime": "*",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tiny-invariant": "^1.2.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/turing-fe/remix-nestjs/issues"
-  },
-  "homepage": "https://github.com/turing-fe/remix-nestjs#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@kunlunjs/fabric": "^0.1.0",
-    "@remix-run/dev": "^1.4.1",
+    "@faker-js/faker": "^6.3.1",
+    "@remix-run/dev": "*",
+    "@remix-run/eslint-config": "*",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
-    "@types/eslint": "^8.4.1",
+    "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.29",
-    "@types/prettier": "^2.6.0",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.1",
-    "autoprefixer": "^10.4.5",
-    "c8": "^7.11.2",
-    "cross-env": "^7.0.3",
-    "cypress": "^9.6.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.4",
+    "c8": "^7.11.0",
+    "cypress": "^9.5.3",
     "dotenv": "^16.0.0",
-    "esbuild": "^0.14.38",
-    "eslint": "^8.14.0",
-    "happy-dom": "^3.1.0",
-    "husky": "^7.0.4",
+    "esbuild": "^0.14.29",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "happy-dom": "^2.55.0",
+    "msw": "^0.39.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "prisma": "^3.13.0",
     "start-server-and-test": "^1.14.0",
-    "stylelint": "^14.8.0",
     "tailwindcss": "^3.0.24",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.6",
+    "vite": "^2.9.1",
     "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.10.0"
+    "vitest": "^0.8.2"
   },
-  "dependencies": {
-    "@prisma/client": "^3.13.0",
-    "@remix-run/express": "^1.4.1",
-    "@remix-run/node": "^1.4.1",
-    "@remix-run/react": "^1.4.1",
-    "@remix-run/server-runtime": "^1.4.1",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "express": "^4.18.0",
-    "morgan": "^1.10.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "tiny-invariant": "^1.2.0"
+  "engines": {
+    "node": ">=14"
+  },
+  "prisma": {
+    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
   }
 }
