--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["./cypress"],
   "compilerOptions": {
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "lib": ["ES2019", "DOM", "DOM.Iterable"],
     "types": ["vitest/globals"],
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -17,8 +17,9 @@
       "~/*": ["./app/*"]
     },
     "skipLibCheck": true,
+    // Remix takes care of building everything in `remix build`.
     "noEmit": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true
   }
 }
