--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "docker": "docker-compose up -d",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint:fix": "eslint --cache --cache-location ./node_modules/.cache/eslint . --fix --color",
+    "format": "prettier --write .",
+    "stylelint": "stylelint **/*.{css,less,sass,scss,styl}",
+    "stylelint:fix": "stylelint **/*.{css,less,sass,scss,styl} --fix",
     "setup": "prisma migrate dev && prisma db seed",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
     "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js"
@@ -37,6 +41,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
+    "@kunlunjs/fabric": "^0.2.4",
     "@remix-run/dev": "*",
     "@remix-run/eslint-config": "*",
     "@testing-library/cypress": "^8.0.2",
@@ -59,15 +64,14 @@
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.38",
     "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
     "happy-dom": "^3.1.0",
     "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.10",
     "prisma": "^3.13.0",
     "start-server-and-test": "^1.14.0",
+    "stylelint": "^14.8.2",
     "tailwindcss": "^3.0.24",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.0.0",
