--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.31",
+    "@types/prettier": "^2.6.0",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
@@ -65,6 +66,8 @@
     "esbuild": "^0.14.38",
     "eslint": "^8.14.0",
     "happy-dom": "^3.1.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.1",
     "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
