--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "stylelint:fix": "stylelint **/*.{css,less,sass,scss,styl} --fix",
     "setup": "prisma migrate dev && prisma db seed",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
-    "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js"
+    "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
+    "test": "vitest",
+    "pretest:e2e:dev": "npm run build",
+    "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"cypress open\"",
+    "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"cypress run\"",
+    "typecheck": "tsc -b && tsc -b cypress",
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
@@ -56,7 +62,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.31",
     "@types/prettier": "^2.6.0",
-    "@types/react": "^18.0.8",
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
@@ -64,8 +70,8 @@
     "cypress": "^9.6.0",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.38",
-    "eslint": "^8.14.0",
-    "happy-dom": "^3.1.0",
+    "eslint": "^8.15.0",
+    "happy-dom": "^3.1.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "msw": "^0.39.2",
@@ -81,7 +87,7 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.8",
     "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.10.2"
+    "vitest": "^0.11.0"
   },
   "engines": {
     "node": ">=14"
