--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@testing-library/user-event": "^14.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
+    "@types/cookie": "^0.5.1",
     "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
@@ -67,6 +68,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.2",
+    "cookie": "^0.5.0",
     "cypress": "^9.6.0",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.38",
