--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
     "build:server": "esbuild --platform=node --format=cjs ./server.ts --outdir=build",
-    "predev": "npm run build",
     "dev": "run-p dev:*",
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config --require ./mocks ./build/server.js",
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
@@ -45,6 +44,7 @@
     "morgan": "^1.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "remark-mdx-frontmatter": "^1.1.1",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
@@ -91,7 +91,7 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.8",
     "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.12.0"
+    "vitest": "^0.11.0"
   },
   "engines": {
     "node": ">=14"
