--- a/package.json
+++ b/package.json
@@ -36,15 +36,21 @@
     "@remix-run/node": "1.4.3",
     "@remix-run/react": "1.4.3",
     "@remix-run/server-runtime": "1.4.3",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.1",
+    "@tailwindcss/typography": "^0.5.2",
     "bcryptjs": "^2.4.3",
     "chalk": "4.1.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
+    "highlight.js": "^11.5.1",
     "morgan": "^1.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "rehype-highlight": "^5.0.2",
     "remark-mdx-frontmatter": "^1.1.1",
+    "remark-toc": "^8.0.1",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
