feat: ✨ 规范环境变量

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 SESSION_SECRET="super-duper-s3cret"
+# POSTGRES_USER=
+# POSTGRES_PASSWORD=
+# POSTGRES_DB=
+# MYSQL_ROOT_PASSWORD=
+# MYSQL_DATABASE=
+# MYSQL_USER=
+# MYSQL_PASSWORD=
+# PRIMARY_REGION=
+# FLY_REGION=
