--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,16 @@ services:
       - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+  # redis:
+  #   image: redis
+  #   ports:
+  #     - '6379:6379'
+  # mongodb:
+  #   image: mongo
+  #   ports:
+  #     - '27017:27017'
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
