feat: ✨ add pm2

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stylelint:fix": "stylelint **/*.{css,less,sass,scss,styl} --fix",
     "setup": "prisma migrate dev && prisma db seed",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
+    "start:pm2": "pm2 start",
     "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
     "test": "vitest",
     "pretest:e2e:dev": "npm run build",
@@ -86,6 +87,7 @@
     "lint-staged": "^12.4.1",
     "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
+    "pm2": "^5.2.0",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prisma": "^3.13.0",
