--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
     "build:server": "esbuild --platform=node --format=cjs ./server.ts --outdir=build",
+    "start:nestjs": "nest start",
+    "start:nestjs:dev": "nest start --watch",
+    "build:nestjs": "nest build",
     "dev": "run-p dev:*",
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config --require ./mocks ./build/server.js",
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
@@ -32,6 +35,19 @@
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.11",
+    "@nestjs/axios": "^0.0.7",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/graphql": "^10.0.11",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "^1.0.1",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.13.0",
     "@remix-run/express": "1.4.3",
     "@remix-run/node": "1.4.3",
@@ -42,21 +58,40 @@
     "@tailwindcss/typography": "^0.5.2",
     "bcryptjs": "^2.4.3",
     "chalk": "4.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "compression": "^1.7.4",
+    "cron-validate": "^1.4.3",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.2",
     "express": "^4.18.1",
+    "fs-extra": "^10.1.0",
+    "graphql": "^16.5.0",
+    "graphql-scalars": "^1.17.0",
+    "graphql-subscriptions": "^2.0.0",
     "highlight.js": "^11.5.1",
+    "lodash": "^4.17.21",
+    "methods": "^1.1.2",
+    "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "reflect-metadata": "^0.1.13",
     "rehype-highlight": "^5.0.2",
     "remark-mdx-frontmatter": "^1.1.1",
     "remark-toc": "^8.0.1",
+    "rxjs": "^7.5.5",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
     "@kunlunjs/fabric": "^0.2.4",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/testing": "^8.4.4",
     "@remix-run/dev": "1.4.3",
     "@remix-run/eslint-config": "1.4.3",
     "@testing-library/cypress": "^8.0.2",
@@ -64,26 +99,30 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/cookie": "^0.5.1",
     "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/lodash": "^4.14.182",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.31",
     "@types/prettier": "^2.6.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/supertest": "^2.0.12",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.2",
     "cookie": "^0.5.0",
-    "cypress": "^9.6.0",
+    "cypress": "^9.6.1",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.38",
     "eslint": "^8.15.0",
     "happy-dom": "^3.1.1",
-    "husky": "^8.0.0",
+    "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "msw": "^0.39.2",
     "npm-run-all": "^4.1.5",
@@ -93,6 +132,7 @@
     "prisma": "^3.13.0",
     "start-server-and-test": "^1.14.0",
     "stylelint": "^14.8.2",
+    "supertest": "^6.2.3",
     "tailwindcss": "^3.0.24",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^4.0.0",
