--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     // Remix takes care of building everything in `remix build`.
     "noEmit": true,
     "allowJs": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
