--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "run-s build:*",
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
+    "prebuild:server": "nest build",
     "build:server": "esbuild --platform=node --format=cjs ./server.ts --outdir=build",
     "start:nestjs": "nest start",
     "start:nestjs:dev": "nest start --watch",
-    "build:nestjs": "nest build",
     "dev": "run-p dev:*",
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config --require ./mocks ./build/server.js",
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
@@ -125,6 +125,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "msw": "^0.39.2",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "pm2": "^5.2.0",
     "postcss": "^8.4.13",
