--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=development
+PORT=3000
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 SESSION_SECRET="super-duper-s3cret"
 # POSTGRES_USER=
