feat: ✨ 增加基本布局与导航菜单

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^0.19.6",
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.8.8",
     "@nestjs/apollo": "^10.0.11",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.4.4",
@@ -60,11 +64,13 @@
     "chalk": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "clsx": "^1.1.1",
     "compression": "^1.7.4",
     "cron-validate": "^1.4.3",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.2",
     "express": "^4.18.1",
+    "fast-glob": "^3.2.11",
     "fs-extra": "^10.1.0",
     "graphql": "^16.5.0",
     "graphql-scalars": "^1.17.0",
@@ -82,6 +88,7 @@
     "pino-pretty": "^7.6.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.0",
     "reflect-metadata": "^0.1.13",
     "rehype-highlight": "^5.0.2",
     "remark-mdx-frontmatter": "^1.1.1",
